--- a/style.css
+++ b/style.css
@@ -39,14 +39,20 @@ header {
     box-shadow: 4px 4px 10px #0000005e;
      }
 .burg { 
-    width: 300px; 
-    height: 300px; 
+    min-width: 50px;
+    min-height: 50px;
+    max-width: 300px; 
+    max-height: 300px; 
     margin-right: 10px; 
     vertical-align: middle; 
     
    
      }
-.batata { 
+.batata {
+    min-width: 50px;
+    min-height: 50px;
+    max-width: 300px; 
+    max-height: 300px;  
     width: 400px; 
     height: 200px; 
     padding-bottom: 100px;
@@ -55,6 +61,10 @@ header {
     
      }
 .refri { 
+    min-width: 50px;
+    min-height: 50px;
+    max-width: 300px; 
+    max-height: 300px; 
     width: 400px; 
     height: 300px; 
     margin-right: 10px; 
@@ -62,6 +72,10 @@ header {
     
      }  
 .coca { 
+    min-width: 50px;
+    min-height: 50px;
+    max-width: 300px; 
+    max-height: 300px; 
     width: 200px; 
     height: 300px; 
     margin-right: 10px; 
@@ -69,6 +83,10 @@ header {
     
      }
 .sorvete { 
+    min-width: 50px;
+    min-height: 50px;
+    max-width: 300px; 
+    max-height: 300px; 
     width: 400px; 
     height: 400px; 
     margin-right: 10px; 
@@ -120,14 +138,21 @@ nav a:hover {
     box-shadow: 4px 4px 10px #0000005e;
      }
 
-main { display: flex; 
+main {
+    
+    margin: 0px;
+    display: flex; 
     flex-wrap: wrap;
      padding: 1rem;
     padding-top: 230px;
     background-image: linear-gradient(to bottom, #641507,#641507, #8a2d21bb,rgba(245, 80, 80, 0));
      }
 .produto { 
-     
+    
+    max-width: 800px;
+    max-height: 800px;
+     min-width: 10px;
+    min-height: 50px;
     border-radius: 8px; 
     padding: 2rem; 
     margin: 0.7rem;  
@@ -272,18 +297,23 @@ input, select, button {
  .imgnovidade { 
   
     margin: auto;
-    margin-top: 20px;
+    margin-top: 40px;
     border-radius: 10px;
+    max-width: 800px;
+    max-height: 600px;
+    min-width: 200px;
+    min-height: 200px;
    
      }
 .novidade {
     
-  margin-left: 100px;
-    margin-right: 100px;
+  
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.5em;
     font-weight: bold;
-    
+    min-width: 200px;
+    min-height: 100px;
+   
     border-radius: 10px;
    
     text-indent: justify;
@@ -320,6 +350,10 @@ input, select, button {
 /* pagina quem somos nós */
 
 .quemimg { 
+    max-width: 300px;
+    max-height: 300px;
+    min-width: 50px;
+    min-height: 40px;
     width: 300px; 
     height: 300px; 
     margin: auto;
